DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyRelationship__c/TIMBASURVEYS__SurveyRelationship__c.object-meta.xml
<CustomObject>
    <label>SurveyRelationship</label>
    <nameField>
        <label>SurveyRelationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyRelationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>