DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyRelationship__c/fields/TIMBASURVEYS__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>