DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyRelationship__c/fields/TIMBASURVEYS__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>